--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ body, html {
 @media (max-width: 600px) {
   .event img {
     width: 100%;
-    max-width: 80%;
+    max-width: 100%;
     height: auto;
     margin: 0 auto;
     border-radius: 12px;
@@ -249,8 +249,8 @@ body, html {
     box-sizing: border-box;
   }
   .event {
-    padding: 10px 10px;
-    margin: 10px 10px;
+    padding: 10px;
+    margin: 10px 0;
     width: 100%;
     box-sizing: border-box;
   }
